farmhash for worker-id, and prefix fix on firefox

--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -1365,10 +1365,15 @@ margin:-1px;
     margin-left: 0px !important;
 }
 
+.input-field .prefix
+{
+    position: relative !important;
+}
+
 .channel-finder .input-field .prefix{
     color:white;
     font-size:17px;
-    left: 5px;
+    left: 47px;
     top: -9px;
 }
 
